experimental/parser/testdata/lexer/comments/nested.proto.stderr.txt
error: encountered unmatched `*/` delimiter
  --> testdata/lexer/comments/nested.proto:4:1
   |
 4 | */
   | ^^ expected a closing `/*`
   |
   = note: Protobuf does not support nested block comments

encountered 1 error
